@@ -1,3 +1,9 @@
+2012-03-28  Jakub Jelinek  <jakub@redhat.com>
+
+	PR target/52736
+	* config/i386/sse.md (sse2_loadlpd splitter): Use offset 0
+	instead of 8 in adjust_address.
+
 2012-03-27  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* expmed.c (store_bit_field): Assert that BITREGION_START is a multiple
